corrected alignment

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -238,6 +238,8 @@ ol ol {
   flex-direction: column;
   flex: 1 auto;
   justify-content: center;
+  align-items: center;
+
   margin: 50px 0;
 
   @media ($phone) {
@@ -329,8 +331,8 @@ h4:hover a {
 
 .profilepic{
 
-  width: 400px;
-  height: 400px ;
+  width: 300px;
+  height: 300px ;
   
   background-position: center;
   border-radius:50%;
@@ -342,8 +344,8 @@ h4:hover a {
 
 }
 .profilecolumn3 { 
-  margin-top: 150px;
-  margin-left: 400px;
+  margin-top: 50px;
+  margin-left: 10px;
   
   flex: 1; /* Adjust the flex value to control width proportion */
 /* Add styles as needed */
@@ -361,7 +363,7 @@ h4:hover a {
   
   color: var(--background-secondary-white);
   font-family: 'Eczar', sans-serif;
-  font-size: 48px;
+  font-size: 38px;
   font-weight: bold;
   font-style: normal;
 }
